# Nebula

./: .env.example  .gitignore  Cargo.toml  README.md
cmd/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  main.ts
frontend/src/lib/: AuthEmblem.svelte  Layout.svelte  sveltekit-app-stub.ts
frontend/src/pages/: Dashboard.svelte  Home.svelte  Profile.svelte
frontend/src/pages/auth/: ForgotPassword.svelte  Login.svelte  Register.svelte  ResetPassword.svelte  VerifyEmail.svelte
frontend/src/types/: auth.ts  inertia-props.ts  inertia.d.ts
public/: site.webmanifest
src/: bootstrap.rs  routes.rs
src/actions/: example_action.rs
src/controllers/: auth.rs  dashboard.rs  home.rs  mod.rs  password_reset.rs  profile.rs  static_files.rs  verify_email.rs
src/middleware/: authenticate.rs  logging.rs
src/migrations/: m20240101_000002_create_sessions_table.rs  m20240101_000003_create_remember_tokens_table.rs  m20240101_000004_add_email_verified_at_to_users.rs  m20240101_000005_create_auth_flow_tokens.rs  mod.rs
src/models/: user.rs
tests/: auth_flows.rs  http_flows.rs
tests/common/: mod.rs
